--- a/latex/tutorial.bib
+++ b/latex/tutorial.bib
@@ -9,3 +9,51 @@
  number = {2},
  pages = {438-450}
 }
+
+@PhdThesis{Achterberg2007,
+  Title                    = {Constraint Integer Programming},
+  Author                   = {Tobias Achterberg},
+  School                   = {Technische Universit\"at Berlin},
+  Year                     = {2007},
+  File                     = {:Achterberg_ConstraintIntegerProgramming.pdf:PDF}
+}
+
+@techreport{SCIP6,
+  author = {Ambros Gleixner and Michael Bastubbe and Leon Eifler and Tristan Gally and Gerald Gamrath and Robert Lion Gottwald and Gregor Hendel and Christopher Hojny and Thorsten Koch and Marco E. L{\"u}bbecke and Stephen J. Maher and Matthias Miltenberger and Benjamin M{\"u}ller and Marc E. Pfetsch and Christian Puchert and Daniel Rehfeldt and Franziska Schl{\"o}sser and Christoph Schubert and Felipe Serrano and Yuji Shinano and Jan Merlin Viernickel and Matthias Walter and Fabian Wegscheider and Jonas T. Witt and Jakob Witzig},
+  title = {{The SCIP Optimization Suite 6.0}},
+  type = {Technical Report},
+  institution = {Optimization Online},
+  month = {July},
+  year = {2018},
+  url = {http://www.optimization-online.org/DB_HTML/2018/07/6692.html}
+}
+
+@techreport{SCIP5,
+  author = {Ambros Gleixner and Leon Eifler and Tristan Gally and Gerald Gamrath and Patrick Gemander and Robert Lion Gottwald and Gregor Hendel and Christopher Hojny and Thorsten Koch and Matthias Miltenberger and Benjamin M{\"u}ller and Marc E. Pfetsch and Christian Puchert and Daniel Rehfeldt and Franziska Schl{\"o}sser and Felipe Serrano and Yuji Shinano and Jan Merlin Viernickel and Stefan Vigerske and Dieter Weninger and Jonas T. Witt and Jakob Witzig},
+  title = {{The SCIP Optimization Suite 5.0}},
+  type = {Technical Report},
+  institution = {Optimization Online},
+  month = {December},
+  year = {2017},
+  url = {http://www.optimization-online.org/DB_HTML/2017/12/6385.html}
+}
+
+@techreport{SCIP4,
+  author = {Stephen J. Maher and Tobias Fischer and Tristan Gally and Gerald Gamrath and Ambros Gleixner and Robert Lion Gottwald and Gregor Hendel and Thorsten Koch and Marco E. L{\"u}bbecke and Matthias Miltenberger and Benjamin M{\"u}ller and Marc E. Pfetsch and Christian Puchert and Daniel Rehfeldt and Sebastian Schenker and Robert Schwarz and Felipe Serrano and Yuji Shinano and Dieter Weninger and Jonas T. Witt and Jakob Witzig},
+  title = {{The SCIP Optimization Suite 4.0}},
+  type = {Technical Report},
+  institution = {Optimization Online},
+  month = {March},
+  year = {2017},
+  url = {http://www.optimization-online.org/DB_HTML/2017/03/5895.html}
+}
+
+@techreport{SCIP32,
+  author = {Gerald Gamrath and Tobias Fischer and Tristan Gally and Ambros M. Gleixner and Gregor Hendel and Thorsten Koch and Stephen J. Maher and Matthias Miltenberger and Benjamin M{\"u}ller and Marc E. Pfetsch and Christian Puchert and Daniel Rehfeldt and Sebastian Schenker and Robert Schwarz and Felipe Serrano and Yuji Shinano and Stefan Vigerske and Dieter Weninger and Michael Winkler and Jonas T. Witt and Jakob Witzig},
+  title = {{The SCIP Optimization Suite 3.2}},
+  type = {Technical Report},
+  institution = {Optimization Online},
+  month = {February},
+  year = {2016},
+  url = {http://www.optimization-online.org/DB_HTML/2016/03/5360.html}
+}
