--- a/latex/tutorial-1.tex
+++ b/latex/tutorial-1.tex
@@ -33,6 +33,14 @@
    stringstyle=\color{steelblue}%
 }[keywords,comments,strings]%
 
+\lstset{
+  basicstyle=\ttfamily\scriptsize,
+  columns=fullflexible,
+  frame=double,
+  breaklines=false,
+  postbreak=\mbox{\textcolor{red}{$\hookrightarrow$}\space},
+}
+
 \begin{document}
 
 \maketitle
@@ -94,7 +102,7 @@ The naming of the individual parameters is close to the mathematical model~\eqre
   lastline=6,
   caption=Reading input data with ZIMPL]{../data/sscflp.zpl}
 
-The first param is the name of the data file that we want to process.
+The first \texttt{param} is the name of the data file that we want to process.
 %
 This parameter is used in all subsequent data processing step, with the advantage that the ZIMPL model can be reused for the other data files by changing only this \texttt{datafile} parameter.
 %
@@ -102,20 +110,18 @@ The next two lines contain the statements to read the number of facilities and c
 %
 Here, the command \texttt{use 1} specifies how many lines of the data file should be read in, in this case, only the first line.
 %
-We use those two parameters to declare two sets \texttt{J} and \texttt{I}, which we use as index sets for remaining data to be read in.
+Finally, we use those two parameters to declare two sets \texttt{J} and \texttt{I}, which we use as index sets for remaining data to be read in.
 
-\resizebox{\textwidth}{!}{
-  \lstinputlisting[language=zimpl,
-  firstline=7,
-  lastline=12,
-  caption=Reading input data with ZIMPL continued]{../data/sscflp.zpl}
-}
+\lstinputlisting[language=zimpl,
+firstline=7,
+lastline=12,
+caption=Reading input data with ZIMPL continued]{../data/sscflp.zpl}
 
 We parse the supply of each facility into a new ZIMPL parameter \texttt{s[J]} that is indexed over the set \texttt{J} of facilities.
 %
 Note that the very first line of the data file does not contain facility information.
 %
-The \texttt{read} command is executed with the \texttt{skip 1} which tells ZIMPL to skip the first line.
+Therefore, the \texttt{read} command is executed with the \texttt{skip 1} statement, which tells ZIMPL to skip the first line, followed by another \texttt{use} statement.
 %
 Similar \texttt{read} directives are used to declare the opening costs \texttt{f[J]} per facility, the demand \texttt{d[I]} per customer, and the connection costs \texttt{c[J * I]}.
 %
@@ -126,25 +132,25 @@ to denote all possible combinations of facilities and customers.
 The second part of \texttt{sscflp.zpl} uses the data to build the corresponding instance of the mathematical model~\eqref{eq:model}.
 %
 
-\resizebox{\textwidth}{!}{
-  \lstinputlisting[language=zimpl,
-  firstline=13,
-  caption=Model Declaration in sscflp.zpl]{../data/sscflp.zpl}
-}
+\lstinputlisting[language=zimpl,
+firstline=13,
+caption=Model Declaration in sscflp.zpl]{../data/sscflp.zpl}
 %
 First, binary variables are declared, which encode the decision which facility should be opened (\texttt{y[J]}),
 and the decisions \texttt{x[J*I]} to connect customer and facility, the latter of which are again indexed by the cross-product \texttt{J*I}.
 %
 The next step is to express the objective function in terms of the variables and parameters.
 %
-In our case, we declare that the solver should minimize the objective function named ``cost'', and express the connection and opening costs by two summations over the ground sets of facilities and the product of facilities and customers.
+In our case, we declare that the solver should minimize the objective function named ``cost''. We express the opening and connection costs by two summations over the ground sets of facilities and the product of facilities and customers, respectively.
 %
-Finally, the two types of constraints of~\eqref{eq:model} are declared with the help of the \texttt{subto} key word of ZIMPL, followed by the prefixes \texttt{assign} and \texttt{capacity}, respectively.
+Finally, the two types of constraints of~\eqref{eq:model} are declared with the help of the \texttt{subto} key word of ZIMPL, followed by the names \texttt{assign} and \texttt{capacity}, respectively.
+%
+These names will appear as constraint name prefixes in the translated instance in LP format.
 %
 Both declarations use a \texttt{forall} statement, which will cause ZIMPL to create one constraint of type \texttt{assign} per customer in \texttt{I} and one constraint of type \texttt{capacity} per facility in \texttt{J}.
 
 The model \texttt{sscflp.zpl} can be passed directly to ZIMPL to create an instance \texttt{sscflp.lp} via the following command line call.
-This invocation reads the data file ``cap61.dat'' as specified in
+This invocation reads the data file \texttt{cap61.dat} as specified in
 the first line of \texttt{sscflp.zpl}.
 
 \begin{lstlisting}[language=bash,caption=ZIMPL command line invokation]
@@ -179,12 +185,107 @@ This call creates a much larger instance \texttt{capa1.lp} based on the data in 
 
 For this tutorial, we focus on the most basic instructions of ZIMPL for reading data and constructing mathematical optimization models.
 Please refer to the reference manual of ZIMPL\footnote{accessible online via \url{https://zimpl.zib.de/download/zimpl.pdf}} for a complete overview of key words, operators, and further examples of the ZIMPL modeling language.
-The examples of the reference manual are contained in the \texttt{examples} directory of the ZIMPL source code.
+The example models of the reference manual are contained in the \texttt{examples} directory of the ZIMPL source code.
 
 
 \section{Solution of the Model with SCIP}
 
-\todo[inline]{Gregor}
+After the creation of our \eqref{eq:model} instance in LP format, we would like to know its optimal solution.
+%
+To this end, we use SCIP, the Mixed Integer (Non-)linear Program solver of the SCIP Optimization Suite, in its newest version 6.0.2.
+%
+By typing \texttt{scip} into the command line, we open its interactive shell.
+%
+The welcome message includes version information for SCIP, SoPlex, and some external packages that SCIP has been compiled with.
+%
+
+
+\lstinputlisting[firstline=1,lastline=12,
+  caption=SCIP welcome screen]{../data/mylogfile.log}
+
+First, we need to input our problem instance \texttt{cap61.lp} into SCIP.
+%
+For this, we use the \texttt{read} command followed by the file name of our LP file.
+
+
+\lstinputlisting[firstline=14,lastline=19,
+  caption=SCIP read command]{../data/mylogfile.log}
+
+SCIP displays the number of variables and the number of constraints of this problem instance.
+%
+Note that our purely binary problem has been input as a problem over integer variables (with bounds $0$ and $1$).
+%
+In order to solve the instance, we execute the \texttt{optimize} command.
+
+\lstinputlisting[firstline=21,lastline=60,
+  caption=SCIP optimize command]{../data/mylogfile.log}
+
+The solution process returns with an optimal solution for our problem instance after a fraction of a second.
+%
+Let's have a closer look at the output to understand how SCIP solves the problem to optimality.
+%
+SCIP always starts by presolving with the goal to derive a more compact and solvable
+formulation of the input model.
+%
+For this instance, we can see that after presolving, all variables are indeed binary variables.
+%
+The number of constraints stays unchanged, however, the special
+constraint structure allowed upgrades into the special types \texttt{setppc} and \texttt{knapsack}.
+
+After presolving, the solution process continues with the actual branch-and-cut search.
+%
+A periodic output informs about the effects of the different algorithmic components.
+%
+The column \texttt{primalbound} displays the objective value of the currently best known solution.
+%
+In the sample output, the first solution is found at the very top of the output, followed by
+another two improving solutions, the latter of which is already optimal.
+%
+The column \texttt{dualbound} keeps track of the global lower bound.
+%
+In the first row of the output, the trivial lower bound of 0.0 is displayed, which is immediately tightened
+by the initial LP relaxation.
+%
+In the subsequent steps of root node processing, the dual bound is tightened further through the separation
+of cutting planes, whose number is displayed in the column \texttt{cuts}.
+
+In this particular example, the primal and dual bounds quickly converge.
+%
+SCIP does not even need to start branching to solve this instance.
+%
+
+A non-exhaustive list of further important commands are
+
+\begin{itemize}
+  \item the \texttt{help} command to display the available options
+  \item the \texttt{display ...} menu to display various problem information and solving statistics
+  \item the \texttt{write ...} command to save the best solution in a file
+  \item the \texttt{set} command to enter the parameter settings menu
+\end{itemize}
+
+After saving all relevant information, the SCIP interactive shell is closed by the \texttt{quit} command.
+
+
+
+\paragraph{Remarks}
+
+In this section, we have only briefly mentioned branch-and-cut search.
+%
+For a detailed description of the main branch-and-cut algorithm used by SCIP and the interplay of its components, we refer to
+\cite{Achterberg2007}.
+%
+SCIP is constantly improved and extended by new components.
+%
+For an overview of the recent algorithmic enhancements, we refer to the current release report~\cite{SCIP6}.
+%
+Older technical reports are available for the past major releases 5.0~\cite{SCIP5}, 4.0~\cite{SCIP4}, and 3.2~\cite{SCIP32}.
+
+This tutorial shows how to solve an instance in LP format that was produced by ZIMPL.
+%
+SCIP can also directly read ZIMPL files.
+%
+In order to learn more about the different compilation options, please visit our online documentation \url{https://scip.zib.de/doc/html},
+in particular the installation instructions \url{https://scip.zib.de/doc/html/INSTALL.php}.
 
 \section{Outlook}
 
