--- a/latex/tutorial.bib
+++ b/latex/tutorial.bib
@@ -1,3 +1,43 @@
+@article{aikens1985facility,
+  title={Facility location models for distribution planning},
+  author={Aikens, Charles H},
+  journal={European journal of operational research},
+  volume={22},
+  number={3},
+  pages={263--279},
+  year={1985},
+  publisher={Elsevier}
+}
+
+@article{brandeau1989overview,
+  title={An overview of representative problems in location research},
+  author={Brandeau, Margaret L and Chiu, Samuel S},
+  journal={Management science},
+  volume={35},
+  number={6},
+  pages={645--674},
+  year={1989},
+  publisher={INFORMS}
+}
+
+@incollection{daskin1993toward,
+  title={Toward an integrated model of facility location and transportation network design},
+  author={Daskin, MS and Hurter, AP and VanBuer, MG},
+  booktitle={The Transportation Center, Northwestern University},
+  year={1993}
+}
+
+@article{daskin1993new,
+  title={A New Approach to Solving Applied Location/Allocation Problems},
+  author={Daskin, Mark S and Jones, Philip C},
+  journal={Computer-Aided Civil and Infrastructure Engineering},
+  volume={8},
+  number={6},
+  pages={409--421},
+  year={1993},
+  publisher={Wiley Online Library}
+}
+
 
 
 @Article{Guastaroba14,
