--- a/latex/tutorial.bib
+++ b/latex/tutorial.bib
@@ -38,7 +38,82 @@
   publisher={Wiley Online Library}
 }
 
+@phdthesis{koch2004rapid,
+  title={Rapid mathematical prototyping},
+  author={Koch, Thorsten},
+  year={2004},
+  school={Ph. D. thesis, Technische Universit{\"a}t Berlin}
+}
 
+@PhdThesis{Wunderling1996,
+  Title                    = {Paralleler und objektorientierter {S}implex-{A}l\-go\-rith\-mus},
+  Author                   = {Roland Wunderling},
+  School                   = {Technische Universit{\"a}t Berlin},
+  Year                     = {1996}
+}
+
+@Article{Achterberg2009,
+  Title                    = {{SCIP:} {S}olving {C}onstraint {I}nteger {P}rograms},
+  Author                   = {Tobias Achterberg},
+  Journal                  = {Mathematical Programming Computation},
+  Year                     = {2009},
+  Number                   = {1},
+  Pages                    = {1--41},
+  Volume                   = {1},
+
+  Address                  = {Berlin, Heidelberg},
+  Publisher                = {Springer}
+}
+
+@InProceedings{GamrathLuebbecke2010,
+  Title                    = {Experiments with a Generic {D}antzig-{W}olfe Decomposition for Integer Programs},
+  Author                   = {Gerald Gamrath and Marco E. L{\"u}bbecke},
+  Booktitle                = {Experimental Algorithms},
+  Year                     = {2010},
+  Editor                   = {Festa, Paola},
+  Pages                    = {239--252},
+  publisher                = {Springer Berlin Heidelberg},
+  Series                   = {Lecture Notes in Computer Science},
+  Volume                   = {6049},
+
+  Doi                      = {10.1007/978-3-642-13193-6_21},
+  Annote                   = {http://dx.doi.org/10.1007/978-3-642-13193-6_21}
+}
+
+@InProceedings{Shinano2018,
+  Title =	 {The {Ubiquity Generator} Framework: 7 Years of Progress in Parallelizing
+                  Branch-and-Bound},
+  Author =	 {Shinano, Yuji},
+  Booktitle =	 {Operations Research Proceedings 2017},
+  Year =	 {2018},
+  Address =	 {Cham},
+  Editor =	 {Kliewer, Natalia and Ehmke, Jan Fabian and Bornd{\"o}rfer, Ralf},
+  Pages =	 {143--149},
+  Publisher =	 {Springer International Publishing}
+}
+
+@Article{Gamrath2017scipjack,
+  author =	 {Gamrath, Gerald and Koch, Thorsten and Maher, Stephen J.  and Rehfeldt, Daniel and
+                  Shinano, Yuji},
+  title =	 {{SCIP-Jack}---a solver for {STP} and variants with parallelization extensions},
+  journal =	 {Mathematical Programming Computation},
+  year =	 {2017},
+  volume =	 {9},
+  number =	 {2},
+  pages =	 {231--296},
+  doi =		 {10.1007/s12532-016-0114-x},
+  annote =	 {https://doi.org/10.1007/s12532-016-0114-x}
+}
+
+@Article{GallyPfetschUlbrich2016,
+  Title                    = {A Framework for Solving Mixed-Integer Semidefinite Programs},
+  Author                   = {Tristan Gally and Marc E. Pfetsch and Stefan Ulbrich},
+  Journal                  = {Optimization Methods and Software},
+  Number                   = {3},
+  Pages                    = {594--632},
+  Volume                   = {33},
+  Year                     = {2018},
+}
 
 @Article{Guastaroba14,
  author = {Guastaroba, G. and Speranza, M.G.},
